--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "playground",
+	"name": "fibi",
 	"private": true,
 	"type": "module",
 	"engines": {
@@ -15,10 +15,12 @@
 	"dependencies": {
 		"@unhead/vue": "^1.8.20",
 		"@vueuse/core": "^10.9.0",
+		"firebase": "^10.9.0",
 		"pinia": "^2.1.7",
 		"vue": "^3.4.21",
 		"vue-i18n": "^9.10.2",
-		"vue-router": "^4.3.0"
+		"vue-router": "^4.3.0",
+		"vuefire": "^3.1.23"
 	},
 	"devDependencies": {
 		"@iconify/utils": "^2.1.22",
