--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -8,7 +8,7 @@ name: Deploy to Firebase Hosting on merge
       - main
 
 env:
-  VITE_SECRET: ${{ secrets.APP_SECRET }}
+  VITE_APP_SECRET: ${{ secrets.APP_SECRET }}
   VITE_API_KEY: ${{ secrets.API_KEY }}
   VITE_AUTH_DOMAIN: ${{ secrets.AUTH_DOMAIN }}
   VITE_PROJECT_ID: ${{ secrets.PROJECT_ID }}
